# cpp-calculator-template

./: CMakeLists.txt
.github/pages/: index.html
.github/workflows/: ci.yml
cmake/: CalculatorConfig.cmake.in  Coverage.cmake  Doxygen.cmake  GitVersion.cmake
docs/: CMakeLists.txt  Doxyfile.in
include/calculator/: calculator.hpp  exceptions.hpp
include/calculator/detail/: operations.hpp
tests/: CMakeLists.txt  test_calculator.cpp
